--- a/Spinner/app/src/main/res/layout/activity_main.xml
+++ b/Spinner/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginTop="68dp"
+        android:onClick="calcular"
         android:text="@string/button"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
